fix alignment and scroll position

--- a/css/style.css
+++ b/css/style.css
@@ -162,7 +162,7 @@ article div {
 article li {
   list-style-type: none;
   position: relative;
-  left: -20px;
+  left: -40px;
 }
 
 /* Footer */
